{
    "name": "TouchControlls",
    "maps": [
        {
            "name": "Touch",
            "id": "cc1aa46a-5d15-45a6-89a5-8cb122de4d00",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "Button",
                    "id": "8baf45ba-70c5-45ed-9249-b1f4f7e89674",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "ce0657bc-94e8-4fbb-9ae4-507b8365e7c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "417eac4d-d823-4894-b8dd-8a2d9fa2f150",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c2660f7-41e9-4180-a9e9-3045de0b8b2b",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5936391-1926-473e-976d-40579ec03d75",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b6e49d3-3bf3-4c1d-adbd-80ec6c18628f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TouchInteraction",
            "id": "4cb133ef-d5a2-491a-b50b-6c93c072c1f2",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "c8992fa9-ec70-4dc5-a6a8-76d07602ff2d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9ecc2f0d-bd62-49bf-a820-e312038ff0db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "514d3ada-db18-4cc6-85c1-5e94c0a55ada",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9a2c58-3ede-4136-ac6d-33efa48d4b6e",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}